# neo-live

./: .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  TODO.md  TODO.norg  flake.nix
lua/neo-live/: init.lua  log.lua
plugin/: neo-live.lua
src/: client.rs  commands.rs  lib.rs  main.rs  protocol.rs  server.rs  watchers.rs
tests/: connect-test.rs  serve-test.rs
