[package]
name = "neo-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
local-ip-address = "0.6.5"
notify = "7.0.0"
tokio = { version = "1.36.0", features = ["full"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
